--- a/python20220829.ipynb
+++ b/python20220829.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "python20220829.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN3+rIQWTLyMTvuUp4Njd47",
+      "authorship_tag": "ABX9TyM4jd/aA/xcKTUPFuEBItOD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -585,7 +585,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 394
+          "height": 520
         },
         "id": "fxmShZ5Oh0Vw",
         "outputId": "8909eea5-2833-4870-ceef-193af2289dc8"
@@ -707,7 +707,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 394
+          "height": 520
         },
         "id": "ccyV5VselpYy",
         "outputId": "2f719769-c102-4f56-95e2-87115b8cd82d"
@@ -850,7 +850,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 394
+          "height": 520
         },
         "id": "avy8xnRjmX_9",
         "outputId": "bdd848dc-5231-4185-8223-ade61be251eb"
@@ -1000,7 +1000,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 71
+          "height": 53
         },
         "id": "oJ7g8GqLw3Eb",
         "outputId": "2a5a3729-4fe8-449c-d77d-3465ae82d822"
@@ -2093,6 +2093,640 @@
             "1 - 0 = 1\n",
             "1 x 0 = 0\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 資料分析簡介\n",
+        "* Numpy => Numerical Python => 科學運算套件\n",
+        "* MatPlotLib => Matrix Plotting Library => 繪圖套件\n",
+        "* Pandas => Panel Data => 資料分析基礎套件"
+      ],
+      "metadata": {
+        "id": "bMQrI0cES4RY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "載入慣例：\n",
+        "``` python\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import pandas as pd\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "-XBTYYLuTM8d"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Numpy\n",
+        "* ndarray => N-Dimensional Array => 多維陣列\n",
+        "* ufunc => Unversal Functions => 通用函式"
+      ],
+      "metadata": {
+        "id": "MNeQzCE4TijY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### ndarray"
+      ],
+      "metadata": {
+        "id": "JrvaMheuVb2l"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "vGvxdemKT1XT"
+      },
+      "execution_count": 118,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = [1,2,3]\n",
+        "y = [4,5,6]"
+      ],
+      "metadata": {
+        "id": "oQYyGV55UnrC"
+      },
+      "execution_count": 119,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x + y"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EO-__zPvUtrL",
+        "outputId": "06ed9fd5-8d7a-4f64-e9f0-3ab09ec8db31"
+      },
+      "execution_count": 120,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 4, 5, 6]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 120
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x *2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EzXRSEwxU1yC",
+        "outputId": "6cc6aa13-ce75-43b0-f974-fe2387979e4f"
+      },
+      "execution_count": 121,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 1, 2, 3]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 121
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x1 = np.array(x)\n",
+        "y1 = np.array(y)\n",
+        "x1 + y1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fBpg2Tc4U_po",
+        "outputId": "84caadc4-b361-4b9c-e1f2-ddca46e3abd3"
+      },
+      "execution_count": 123,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([5, 7, 9])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 123
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x1 * 2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jJaHy2i4VOYZ",
+        "outputId": "e5b691a8-4eaf-498e-f95b-8d00da9ffc35"
+      },
+      "execution_count": 124,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([2, 4, 6])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 124
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### ufunc"
+      ],
+      "metadata": {
+        "id": "sj8WsGvrVibS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math"
+      ],
+      "metadata": {
+        "id": "pIC6p4ajVQXV"
+      },
+      "execution_count": 125,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "math.sin(math.pi/2)"
+      ],
+      "metadata": {
+        "id": "BzIG1pORVvqE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "math.sin(x)"
+      ],
+      "metadata": {
+        "id": "UkRMaoSsV38i"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.sin(np.pi/2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pIAr-lXaV8JB",
+        "outputId": "3890e051-140a-4b65-d25b-96b9c79c9d48"
+      },
+      "execution_count": 129,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 129
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.sin(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_l_HhLQAWNPb",
+        "outputId": "2202bf28-5258-4ccd-d92f-d7516a60bba3"
+      },
+      "execution_count": 130,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.84147098, 0.90929743, 0.14112001])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 130
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list(range(25))"
+      ],
+      "metadata": {
+        "id": "Fmx6bhVeXL0f"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.arange(25)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pQ8HUyl6XX4P",
+        "outputId": "48e1a720-c1c8-4cd9-9f7a-4ca5ea303979"
+      },
+      "execution_count": 132,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
+              "       17, 18, 19, 20, 21, 22, 23, 24])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 132
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data = np.arange(25)"
+      ],
+      "metadata": {
+        "id": "C58x5R0sXb00"
+      },
+      "execution_count": 133,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data.dtype"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iC1Q1H1rXeND",
+        "outputId": "2cc968d1-98c3-4855-f4d5-acd2e90afdf9"
+      },
+      "execution_count": 134,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dtype('int64')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 134
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rJIzEmW-XzU6",
+        "outputId": "473cd08c-7ef0-498a-ea86-b46e21b3df7b"
+      },
+      "execution_count": 135,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(25,)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 135
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data.size"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FUgUxSuGX3KJ",
+        "outputId": "ecbed736-3312-4179-f936-2078f95b66cd"
+      },
+      "execution_count": 136,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "25"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 136
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data.reshape(5,5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "U_9tJwAoYCtN",
+        "outputId": "08b17569-8e2d-42ec-ffac-cf8906f446ce"
+      },
+      "execution_count": 137,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0,  1,  2,  3,  4],\n",
+              "       [ 5,  6,  7,  8,  9],\n",
+              "       [10, 11, 12, 13, 14],\n",
+              "       [15, 16, 17, 18, 19],\n",
+              "       [20, 21, 22, 23, 24]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 137
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data2 = data.reshape(5,5)\n",
+        "data2.shape\n",
+        "data2.size"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3O-yu-gRYLWx",
+        "outputId": "c64d769e-15de-45e6-bf93-6099f55216d1"
+      },
+      "execution_count": 142,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "25"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 142
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### indexing & slicing"
+      ],
+      "metadata": {
+        "id": "IYHiJhORYfcm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "R9U1LRQ9YjdT",
+        "outputId": "d6be3d29-6cc5-48b8-e403-06f847222efd"
+      },
+      "execution_count": 143,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0,  1,  2,  3,  4],\n",
+              "       [ 5,  6,  7,  8,  9],\n",
+              "       [10, 11, 12, 13, 14],\n",
+              "       [15, 16, 17, 18, 19],\n",
+              "       [20, 21, 22, 23, 24]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 143
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data2[2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "R_c4gHYYY2BD",
+        "outputId": "1130b9cf-f8a0-4b7a-ffd9-4aaecd4f892e"
+      },
+      "execution_count": 145,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([10, 11, 12, 13, 14])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 145
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data2[2][2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RXlkROxGYnS_",
+        "outputId": "821dbae2-8288-4ebd-9f85-73020006cc85"
+      },
+      "execution_count": 144,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "12"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 144
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### get 6,7 & 11,12"
+      ],
+      "metadata": {
+        "id": "JnmDlaHtZMSD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data2[1:3]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dpWFbkvjY89F",
+        "outputId": "d5e67ff0-fdb5-4fc3-a094-6ab88145461b"
+      },
+      "execution_count": 147,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 5,  6,  7,  8,  9],\n",
+              "       [10, 11, 12, 13, 14]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 147
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data2[2,2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "o-8TngT7ZQEg",
+        "outputId": "9e5b66f8-f5a1-4f98-c766-e894715a4bb0"
+      },
+      "execution_count": 149,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "12"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 149
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data2[1:3,1:3]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Fiz9n1feZror",
+        "outputId": "81574d32-1a00-422c-8c0c-00fb0d14ff24"
+      },
+      "execution_count": 150,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 6,  7],\n",
+              "       [11, 12]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 150
         }
       ]
     }
