使用 Colaboratory 建立

--- a/python20220829.ipynb
+++ b/python20220829.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "python20220829.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM/mev6RTTJ0WPDeBhCIzEY",
+      "authorship_tag": "ABX9TyMpIWNc7wBSvtR++x5NNUAw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5731,6 +5731,559 @@
           },
           "metadata": {},
           "execution_count": 226
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Scikit-Learn使用簡介"
+      ],
+      "metadata": {
+        "id": "Cv6LvVoS9puD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.datasets import load_iris"
+      ],
+      "metadata": {
+        "id": "SToq5EEl9t35"
+      },
+      "execution_count": 227,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "iris = load_iris()"
+      ],
+      "metadata": {
+        "id": "RuvR63Dr-F-w"
+      },
+      "execution_count": 228,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "iris.feature_names"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RAtwY_bf9-fT",
+        "outputId": "fd14a52b-7022-42a4-b351-72b2a63f4454"
+      },
+      "execution_count": 229,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['sepal length (cm)',\n",
+              " 'sepal width (cm)',\n",
+              " 'petal length (cm)',\n",
+              " 'petal width (cm)']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 229
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "iris.target_names"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EvmUtfmU-V6n",
+        "outputId": "dd944104-1264-4d57-cea2-61e2b27efcb5"
+      },
+      "execution_count": 234,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['setosa', 'versicolor', 'virginica'], dtype='<U10')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 234
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = iris.data\n",
+        "y = iris.target"
+      ],
+      "metadata": {
+        "id": "4Da4GZuH-zjK"
+      },
+      "execution_count": 238,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6xpzynhb-1tK",
+        "outputId": "6e60a1a3-f9bb-4aba-a232-b39ac6d897b8"
+      },
+      "execution_count": 239,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[5.1, 3.5, 1.4, 0.2],\n",
+              "       [4.9, 3. , 1.4, 0.2],\n",
+              "       [4.7, 3.2, 1.3, 0.2],\n",
+              "       [4.6, 3.1, 1.5, 0.2],\n",
+              "       [5. , 3.6, 1.4, 0.2],\n",
+              "       [5.4, 3.9, 1.7, 0.4],\n",
+              "       [4.6, 3.4, 1.4, 0.3],\n",
+              "       [5. , 3.4, 1.5, 0.2],\n",
+              "       [4.4, 2.9, 1.4, 0.2],\n",
+              "       [4.9, 3.1, 1.5, 0.1],\n",
+              "       [5.4, 3.7, 1.5, 0.2],\n",
+              "       [4.8, 3.4, 1.6, 0.2],\n",
+              "       [4.8, 3. , 1.4, 0.1],\n",
+              "       [4.3, 3. , 1.1, 0.1],\n",
+              "       [5.8, 4. , 1.2, 0.2],\n",
+              "       [5.7, 4.4, 1.5, 0.4],\n",
+              "       [5.4, 3.9, 1.3, 0.4],\n",
+              "       [5.1, 3.5, 1.4, 0.3],\n",
+              "       [5.7, 3.8, 1.7, 0.3],\n",
+              "       [5.1, 3.8, 1.5, 0.3],\n",
+              "       [5.4, 3.4, 1.7, 0.2],\n",
+              "       [5.1, 3.7, 1.5, 0.4],\n",
+              "       [4.6, 3.6, 1. , 0.2],\n",
+              "       [5.1, 3.3, 1.7, 0.5],\n",
+              "       [4.8, 3.4, 1.9, 0.2],\n",
+              "       [5. , 3. , 1.6, 0.2],\n",
+              "       [5. , 3.4, 1.6, 0.4],\n",
+              "       [5.2, 3.5, 1.5, 0.2],\n",
+              "       [5.2, 3.4, 1.4, 0.2],\n",
+              "       [4.7, 3.2, 1.6, 0.2],\n",
+              "       [4.8, 3.1, 1.6, 0.2],\n",
+              "       [5.4, 3.4, 1.5, 0.4],\n",
+              "       [5.2, 4.1, 1.5, 0.1],\n",
+              "       [5.5, 4.2, 1.4, 0.2],\n",
+              "       [4.9, 3.1, 1.5, 0.2],\n",
+              "       [5. , 3.2, 1.2, 0.2],\n",
+              "       [5.5, 3.5, 1.3, 0.2],\n",
+              "       [4.9, 3.6, 1.4, 0.1],\n",
+              "       [4.4, 3. , 1.3, 0.2],\n",
+              "       [5.1, 3.4, 1.5, 0.2],\n",
+              "       [5. , 3.5, 1.3, 0.3],\n",
+              "       [4.5, 2.3, 1.3, 0.3],\n",
+              "       [4.4, 3.2, 1.3, 0.2],\n",
+              "       [5. , 3.5, 1.6, 0.6],\n",
+              "       [5.1, 3.8, 1.9, 0.4],\n",
+              "       [4.8, 3. , 1.4, 0.3],\n",
+              "       [5.1, 3.8, 1.6, 0.2],\n",
+              "       [4.6, 3.2, 1.4, 0.2],\n",
+              "       [5.3, 3.7, 1.5, 0.2],\n",
+              "       [5. , 3.3, 1.4, 0.2],\n",
+              "       [7. , 3.2, 4.7, 1.4],\n",
+              "       [6.4, 3.2, 4.5, 1.5],\n",
+              "       [6.9, 3.1, 4.9, 1.5],\n",
+              "       [5.5, 2.3, 4. , 1.3],\n",
+              "       [6.5, 2.8, 4.6, 1.5],\n",
+              "       [5.7, 2.8, 4.5, 1.3],\n",
+              "       [6.3, 3.3, 4.7, 1.6],\n",
+              "       [4.9, 2.4, 3.3, 1. ],\n",
+              "       [6.6, 2.9, 4.6, 1.3],\n",
+              "       [5.2, 2.7, 3.9, 1.4],\n",
+              "       [5. , 2. , 3.5, 1. ],\n",
+              "       [5.9, 3. , 4.2, 1.5],\n",
+              "       [6. , 2.2, 4. , 1. ],\n",
+              "       [6.1, 2.9, 4.7, 1.4],\n",
+              "       [5.6, 2.9, 3.6, 1.3],\n",
+              "       [6.7, 3.1, 4.4, 1.4],\n",
+              "       [5.6, 3. , 4.5, 1.5],\n",
+              "       [5.8, 2.7, 4.1, 1. ],\n",
+              "       [6.2, 2.2, 4.5, 1.5],\n",
+              "       [5.6, 2.5, 3.9, 1.1],\n",
+              "       [5.9, 3.2, 4.8, 1.8],\n",
+              "       [6.1, 2.8, 4. , 1.3],\n",
+              "       [6.3, 2.5, 4.9, 1.5],\n",
+              "       [6.1, 2.8, 4.7, 1.2],\n",
+              "       [6.4, 2.9, 4.3, 1.3],\n",
+              "       [6.6, 3. , 4.4, 1.4],\n",
+              "       [6.8, 2.8, 4.8, 1.4],\n",
+              "       [6.7, 3. , 5. , 1.7],\n",
+              "       [6. , 2.9, 4.5, 1.5],\n",
+              "       [5.7, 2.6, 3.5, 1. ],\n",
+              "       [5.5, 2.4, 3.8, 1.1],\n",
+              "       [5.5, 2.4, 3.7, 1. ],\n",
+              "       [5.8, 2.7, 3.9, 1.2],\n",
+              "       [6. , 2.7, 5.1, 1.6],\n",
+              "       [5.4, 3. , 4.5, 1.5],\n",
+              "       [6. , 3.4, 4.5, 1.6],\n",
+              "       [6.7, 3.1, 4.7, 1.5],\n",
+              "       [6.3, 2.3, 4.4, 1.3],\n",
+              "       [5.6, 3. , 4.1, 1.3],\n",
+              "       [5.5, 2.5, 4. , 1.3],\n",
+              "       [5.5, 2.6, 4.4, 1.2],\n",
+              "       [6.1, 3. , 4.6, 1.4],\n",
+              "       [5.8, 2.6, 4. , 1.2],\n",
+              "       [5. , 2.3, 3.3, 1. ],\n",
+              "       [5.6, 2.7, 4.2, 1.3],\n",
+              "       [5.7, 3. , 4.2, 1.2],\n",
+              "       [5.7, 2.9, 4.2, 1.3],\n",
+              "       [6.2, 2.9, 4.3, 1.3],\n",
+              "       [5.1, 2.5, 3. , 1.1],\n",
+              "       [5.7, 2.8, 4.1, 1.3],\n",
+              "       [6.3, 3.3, 6. , 2.5],\n",
+              "       [5.8, 2.7, 5.1, 1.9],\n",
+              "       [7.1, 3. , 5.9, 2.1],\n",
+              "       [6.3, 2.9, 5.6, 1.8],\n",
+              "       [6.5, 3. , 5.8, 2.2],\n",
+              "       [7.6, 3. , 6.6, 2.1],\n",
+              "       [4.9, 2.5, 4.5, 1.7],\n",
+              "       [7.3, 2.9, 6.3, 1.8],\n",
+              "       [6.7, 2.5, 5.8, 1.8],\n",
+              "       [7.2, 3.6, 6.1, 2.5],\n",
+              "       [6.5, 3.2, 5.1, 2. ],\n",
+              "       [6.4, 2.7, 5.3, 1.9],\n",
+              "       [6.8, 3. , 5.5, 2.1],\n",
+              "       [5.7, 2.5, 5. , 2. ],\n",
+              "       [5.8, 2.8, 5.1, 2.4],\n",
+              "       [6.4, 3.2, 5.3, 2.3],\n",
+              "       [6.5, 3. , 5.5, 1.8],\n",
+              "       [7.7, 3.8, 6.7, 2.2],\n",
+              "       [7.7, 2.6, 6.9, 2.3],\n",
+              "       [6. , 2.2, 5. , 1.5],\n",
+              "       [6.9, 3.2, 5.7, 2.3],\n",
+              "       [5.6, 2.8, 4.9, 2. ],\n",
+              "       [7.7, 2.8, 6.7, 2. ],\n",
+              "       [6.3, 2.7, 4.9, 1.8],\n",
+              "       [6.7, 3.3, 5.7, 2.1],\n",
+              "       [7.2, 3.2, 6. , 1.8],\n",
+              "       [6.2, 2.8, 4.8, 1.8],\n",
+              "       [6.1, 3. , 4.9, 1.8],\n",
+              "       [6.4, 2.8, 5.6, 2.1],\n",
+              "       [7.2, 3. , 5.8, 1.6],\n",
+              "       [7.4, 2.8, 6.1, 1.9],\n",
+              "       [7.9, 3.8, 6.4, 2. ],\n",
+              "       [6.4, 2.8, 5.6, 2.2],\n",
+              "       [6.3, 2.8, 5.1, 1.5],\n",
+              "       [6.1, 2.6, 5.6, 1.4],\n",
+              "       [7.7, 3. , 6.1, 2.3],\n",
+              "       [6.3, 3.4, 5.6, 2.4],\n",
+              "       [6.4, 3.1, 5.5, 1.8],\n",
+              "       [6. , 3. , 4.8, 1.8],\n",
+              "       [6.9, 3.1, 5.4, 2.1],\n",
+              "       [6.7, 3.1, 5.6, 2.4],\n",
+              "       [6.9, 3.1, 5.1, 2.3],\n",
+              "       [5.8, 2.7, 5.1, 1.9],\n",
+              "       [6.8, 3.2, 5.9, 2.3],\n",
+              "       [6.7, 3.3, 5.7, 2.5],\n",
+              "       [6.7, 3. , 5.2, 2.3],\n",
+              "       [6.3, 2.5, 5. , 1.9],\n",
+              "       [6.5, 3. , 5.2, 2. ],\n",
+              "       [6.2, 3.4, 5.4, 2.3],\n",
+              "       [5.9, 3. , 5.1, 1.8]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 239
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "55nQgqac-7HQ",
+        "outputId": "fb92d9ad-f6c0-4a41-be88-6737b0b4ca04"
+      },
+      "execution_count": 240,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 240
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 拆分訓練集跟測試集"
+      ],
+      "metadata": {
+        "id": "kJpEKRVg_MMc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import train_test_split"
+      ],
+      "metadata": {
+        "id": "jnF5RH-B_vrn"
+      },
+      "execution_count": 244,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)"
+      ],
+      "metadata": {
+        "id": "QpHqei6q_wmK"
+      },
+      "execution_count": 245,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 使用 scikit-learn 做機器學習"
+      ],
+      "metadata": {
+        "id": "vNHanq4w_4BK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1.載入模型\n",
+        "from sklearn.svm import SVC"
+      ],
+      "metadata": {
+        "id": "pqMLW0O2_I6-"
+      },
+      "execution_count": 241,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 2.建立模型\n",
+        "clf = SVC()"
+      ],
+      "metadata": {
+        "id": "YEm4ip1O_Xum"
+      },
+      "execution_count": 242,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 3. 訓練模型\n",
+        "clf.fit(X_train, y_train)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_ToGeLIK_did",
+        "outputId": "85716453-c215-4f78-ec61-6d027d6cd55c"
+      },
+      "execution_count": 246,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "SVC()"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 246
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 計算準確度\n",
+        "clf.score(X_test, y_test)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MXZjWoRE_-Ev",
+        "outputId": "defa3279-6f23-4204-f4b2-6d2b59c57803"
+      },
+      "execution_count": 247,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9333333333333333"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 247
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 4. 使用模型\n",
+        "clf.predict(X_test)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rNWbJIHqAItf",
+        "outputId": "7e1ad01c-1d16-4a05-a8e3-51bd468f52a1"
+      },
+      "execution_count": 248,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 0, 1, 1, 1, 1, 2, 2, 1, 2, 2, 2, 0, 1, 2, 2, 1, 1, 2, 0, 0, 0,\n",
+              "       1, 2, 2, 1, 0, 2, 1, 0])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 248
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1. 載入模型\n",
+        "# from sklearn.svm import SVC\n",
+        "from sklearn.ensemble import RandomForestClassifier"
+      ],
+      "metadata": {
+        "id": "nq_Slm0KAUHj"
+      },
+      "execution_count": 249,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 2. 建立模型\n",
+        "# clf = SVC()\n",
+        "clf = RandomForestClassifier()"
+      ],
+      "metadata": {
+        "id": "J-DqUMhMAWW9"
+      },
+      "execution_count": 250,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 3. 訓練模型\n",
+        "clf.fit(X_train, y_train)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "h-f4rR68AYKt",
+        "outputId": "cd302d98-30e9-41f9-b81a-797c72dc0929"
+      },
+      "execution_count": 251,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "RandomForestClassifier()"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 251
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 計算準確度\n",
+        "clf.score(X_test, y_test)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "glMqz-Q7AZ4M",
+        "outputId": "af26563d-6dea-4465-ebe3-8fa52411cb3c"
+      },
+      "execution_count": 252,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.8666666666666667"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 252
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 4. 使用模型\n",
+        "clf.predict(X_test)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ygz_pMvCAcCy",
+        "outputId": "307730f3-757d-4881-c562-3202b29325f9"
+      },
+      "execution_count": 253,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 0, 1, 1, 1, 1, 2, 2, 1, 2, 2, 2, 0, 1, 2, 1, 1, 1, 2, 0, 0, 0,\n",
+              "       1, 2, 2, 1, 0, 1, 1, 0])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 253
         }
       ]
     }
